#5610 - fix expand-collapse icon color

--- a/packages/survey-creator-core/src/components/question.scss
+++ b/packages/survey-creator-core/src/components/question.scss
@@ -977,8 +977,7 @@ svc-question,
     &:focus {
       opacity: initial;
     }
-
-    use {
+    .sv-action-bar-item__icon use {
       fill: $foreground-dim-light;
     }
   }
